# opencv2-framework-for-mac

./: .gitignore  CMakeLists.txt  README.md  build-osx-framework.sh  uninstall-osx-framework.sh
OSX-Installer/: Distribution.xml  build-osx-installer.sh
OSX-Installer/Resources/: License.rtf
OSX-Installer/Scripts/: postinstall
cmake/: OpenCVDetectPythonOrg.cmake
modules/pythonorg/: CMakeLists.txt
